2005-07-06  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/telnetcon.cpp: Minor bug Fix.

	* src/sitelistdlg.cpp:
	(CSiteListDlg::OnSearch): Minor bug fix.

	* data/sitelist:
	Replace the site list with a latest one.

2005-07-06  Jim Huang  <jserv@kaffe.org>

	* src/configfile.cpp (CConfigFile::CConfigFile):
	Use DATADIR (%prefix%/share) as data dir instead of /etc.
	
	* src/Makefile.am: Likewise.

	* data/Makefile.am,
	Makefile.am,
	configure.ac:
	Add rules for site list file.

	* AUTHORS: Updated.

2005-07-06  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/telnetcon.cpp
	(CTelnetCon::OnClose): Add "auto reconnect" support.
	Fix lots of thread-related bugs.

2005-07-06  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/mainframe.cpp
	(CMainFrame::OnFont): Disable "style" in font selection dialog.

	* src/appconfig.cpp, src/pcmanx_pure_gtk2.cpp:
	Add "Show tray icon" preference.

	* src/generalprefpage.cpp:
	Add "Show tray icon" and "Web browser" preference.

	* src/Makefile.am:
	Add all-local to strip the compiled executable file.

2005-07-06  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/termview.cpp:
	Some bug fix.
	
	* src/caret.cpp:
	Some minor bug fix.
	
	* src/mainframe.cpp
	(CMainFrame::LoadStartupSites):
	Automatically connect to some sites on startup.
	
	* src/telnetcon.cpp:
	Fix some problems related to multi-threading.
	
	* src/sitepage.cpp:
	Add "Connect on startup" check box.

2005-07-06  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/termview.cpp
	(CTermView::OnDestroy): Removed.
	(CTermView::OnBeforeDestroy): Destroy XftDraw correctly.
	Destructor of CTermView can be called properly now.

	* src/mainframe.cpp (CMainFrame::CloseCon):
	Use wrapper function provided by CNotebook instead of raw gtk+ API.

2005-07-06  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/termdata.cpp (CTermView::UpdateDisplay)
	src/termdata.h:
	Delay some sceen update when needed. Enhance drawing performance 
	and avoid some unnecessary flicker.
